Fixed a bug where some themes would send the recorder off screen with page-content css rules

--- a/tinymce/css/poodll.css
+++ b/tinymce/css/poodll.css
@@ -9,3 +9,9 @@
 .pagelayout-embedded #content {padding-top: 0px;}
 #content {width:0px;height:0px;} 
 #page {top:0px;margin-top:0px;padding-top:0px;}
+#tinymce_poodll_container{
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	margin: 5px;
+}
